<resources>
    <string name="app_name">Your Destination</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="note">Note</string>
    <string name="wish_list">Wishlist</string>
    <string name="rate_us">Rate Us</string>
    <string name="log_out">Log out</string>
    <string name="dashboard">Dashboard</string>
    <string name="settings">Settings</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="recommended_area">Recommended Places</string>
    <string name="key_count">5</string>
    <string name="key_prefix">google_maps_key</string>
    <string name="google_maps_key1">AIzaSyDu-eh2-VVUEZFb4jeybGJ5yaYEG06XtDQ</string>
    <string name="google_maps_key3">AIzaSyD8f6mP376FeFSLxgRmX06eVHelfMscGGo</string>
    <string name="google_maps_key2">AIzaSyDxgNUD8rHGigLfwhSmErhNQuPYHsbe9-w</string>
    <string name="google_maps_key4">AIzaSyDTrZPY-IqwzwXWWhZ6y1syOHuNVbIFX9s</string>
    <string name="google_maps_key5">AIzaSyBaxD7WfU4Lj2H-ZNCHJQOFxWja4VY_ekU</string>
    <string name="google_maps_key">AIzaSyDJ5YrHe6GorQ8BVPtT_gsmTM6ElhZwEHY</string>

    <string-array name="area_StringArray">
        <item>Bagmati</item>
        <item>Janakpur</item>
        <item>Gandaki</item>
    </string-array>
</resources>
